devops/legacy/manifests/redis-local-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-proxy
  namespace: posthoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-proxy
  template:
    metadata:
      labels:
        app: redis-proxy
    spec:
      containers:
      - name: stunnel
        image: dweomer/stunnel
        ports:
        - containerPort: 6379
          name: redis
