devops/legacy/manifests/redis-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-proxy
  namespace: posthoot
spec:
  selector:
    app: redis-proxy
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
